fix product height on small size

--- a/assets/css/product.scss
+++ b/assets/css/product.scss
@@ -220,8 +220,8 @@ body {
                 -webkit-box-pack: center;
                 -ms-flex-pack: center;
                 justify-content: center;
-                -ms-flex-wrap: wrap;
-                flex-wrap: wrap;
+                // -ms-flex-wrap: wrap;
+                // flex-wrap: wrap;
                 //background: #e0efef;
                 margin: 0 0 auto;
                 padding: 0;
@@ -295,21 +295,21 @@ body {
                         }
                     }
                     .art_desc_product_img {
-                        width: 0 !important;
+                        // width: 0 !important;
                         display: -webkit-box;
                         display: -ms-flexbox;
                         display: flex;
                         outline: none;
-                        max-height: 0;
-                        overflow: hidden;
-                        &.slick-active {
-                            width: 100% !important;
-                            max-height: initial;
-                            overflow: auto;
-                        }
+                        // max-height: 0;
+                        // overflow: hidden;
+                        // &.slick-active {
+                        //     width: 100% !important;
+                        //     max-height: initial;
+                        //     overflow: auto;
+                        // }
                         img {
                             max-width: 100%;
-                            max-height: 50%;
+                            // max-height: 50%;
                         }
                     }
                 }
